# agentcore-public-stack

./: .dockerignore  .gitignore  CLAUDE.MD  CODE_REVIEW_TOKEN_STORAGE.md  GEMINI.md  LICENSE  README.md  RELEASE_NOTES.md  deploy.sh  package-lock.json  refresh-aws-sso.sh  setup.ps1  setup.sh  start.ps1  start.sh
backend/: Dockerfile.app-api  Dockerfile.inference-api  Dockerfile.rag-ingestion  README.md  pyproject.toml
backend/lambda-functions/runtime-provisioner/: README.md  lambda_function.py
backend/lambda-functions/runtime-provisioner/tests/: conftest.py  test_modify.py
backend/lambda-functions/runtime-updater/: README.md  lambda_function.py
backend/lambda-functions/runtime-updater/tests/: conftest.py  test_retry.py
backend/scripts/: seed_auth_provider.py  seed_bootstrap_data.py
backend/src/: .env.example  .gitignore
backend/src/agents/: __init__.py
backend/src/agents/builtin_tools/: __init__.py  code_interpreter_diagram_tool.py
backend/src/agents/local_tools/: __init__.py  cludo_search.py  url_fetcher.py  visualization.py  weather.py
backend/src/agents/main_agent/: README.md  USAGE_EXAMPLES.md  __init__.py  main_agent.py
backend/src/agents/main_agent/core/: __init__.py  agent_factory.py  model_config.py  system_prompt_builder.py
backend/src/agents/main_agent/integrations/: external_mcp_client.py  gateway_mcp_client.py  oauth_auth.py
backend/src/agents/main_agent/multimodal/: __init__.py  document_handler.py  file_sanitizer.py  image_handler.py  prompt_builder.py
backend/src/agents/main_agent/quota/: __init__.py  checker.py  event_recorder.py  models.py  repository.py  resolver.py
backend/src/agents/main_agent/session/: __init__.py  compaction_models.py  memory_config.py  preview_session_manager.py  session_factory.py  turn_based_session_manager.py
backend/src/agents/main_agent/streaming/: __init__.py  event_formatter.py  stream_coordinator.py  stream_processor.py  tool_result_processor.py
backend/src/agents/main_agent/tools/: __init__.py  gateway_integration.py  oauth_tool_service.py  tool_catalog.py  tool_filter.py  tool_registry.py
backend/src/agents/main_agent/utils/: __init__.py  global_state.py  timezone.py
backend/src/agents/utils/: config.py
backend/src/apis/app_api/: main.py
backend/src/apis/app_api/admin/: README.md  __init__.py  models.py  routes.py
backend/src/apis/app_api/assistants/: TESTING.md  __init__.py  routes.py
backend/src/apis/app_api/auth/: README.md  __init__.py  models.py  routes.py  service.py
backend/src/apis/app_api/chat/: converse_routes.py  routes.py
backend/src/apis/app_api/costs/: __init__.py  aggregator.py  calculator.py  models.py  pricing_config.py  routes.py
backend/src/apis/app_api/documents/: __init__.py  models.py  routes.py
backend/src/apis/app_api/files/: __init__.py  routes.py  service.py
backend/src/apis/app_api/fine_tuning/: dependencies.py  inference_models.py  inference_repository.py  job_models.py  job_repository.py  models.py  repository.py  routes.py  s3_service.py  sagemaker_service.py  script_packaging_service.py
backend/src/apis/app_api/health/: __init__.py  health.py
backend/src/apis/app_api/memory/: __init__.py  models.py  routes.py
backend/src/apis/app_api/messages/: README.md  __init__.py  models.py
backend/src/apis/app_api/models/: __init__.py  routes.py
backend/src/apis/app_api/sessions/: __init__.py  routes.py
backend/src/apis/app_api/shares/: models.py  routes.py  service.py
backend/src/apis/app_api/storage/: __init__.py  dynamodb_storage.py  metadata_storage.py
backend/src/apis/app_api/system/: __init__.py  cognito_service.py  models.py  repository.py  routes.py
backend/src/apis/app_api/tools/: __init__.py  models.py  repository.py  routes.py  service.py
backend/src/apis/app_api/users/: __init__.py  models.py  routes.py
backend/src/apis/inference_api/: __init__.py  main.py
backend/src/apis/inference_api/chat/: __init__.py  converse_routes.py  models.py  routes.py  service.py
backend/src/apis/shared/: __init__.py  errors.py  quota.py  rate_limit.py
backend/src/apis/shared/assistants/: __init__.py  models.py  rag_service.py  service.py
backend/src/apis/shared/auth/: RBAC_QUICK_REFERENCE.md  README.md  __init__.py  cognito_jwt_validator.py  dependencies.py  generic_jwt_validator.py  jwt_validator.py  models.py  rbac.py  state_store.py
backend/src/apis/shared/auth_providers/: __init__.py  cognito_idp_service.py  models.py  repository.py  service.py
backend/src/apis/shared/files/: __init__.py  file_resolver.py  models.py  repository.py
backend/src/apis/shared/models/: __init__.py  managed_models.py  models.py
backend/src/apis/shared/oauth/: __init__.py  encryption.py  models.py  provider_repository.py  routes.py  service.py  token_cache.py  token_repository.py
backend/src/apis/shared/rbac/: cache.py  (+7 more)
backend/tests/: conftest.py  test_seed_system_admin_jwt.py  test_system_admin.py
backend/tests/apis/: __init__.py  test_citation_events.py
backend/tests/auth/: test_auth_routes.py  test_cognito_jwt_validator.py  test_dependencies.py  test_rbac.py
backend/tests/fine_tuning/: conftest.py  test_admin_routes.py  test_dependencies.py  test_inference_repository.py  test_inference_routes.py  test_inference_script.py  test_job_repository.py  test_job_routes.py  test_repository.py  test_s3_service.py  test_sagemaker_service.py  test_sagemaker_transform.py  test_script_packaging_service.py  test_train_script.py  test_user_routes.py
backend/tests/ingestion/: test_csv_chunker.py  test_token_validation.py
backend/tests/rbac/: test_app_role_admin_service.py  test_app_role_cache.py
backend/tests/routes/: test_auth.py  test_converse_cost_accounting.py  test_model_access_enforcement.py  test_pbt_auth_sweep.py  test_pbt_model_access.py  test_pbt_model_access_preservation.py  test_pbt_request_validation.py  test_share_export.py  test_share_properties.py  test_shares.py
backend/tests/shared/: test_auth_providers_extended.py  test_cognito_idp_service.py  test_rbac_cache_service.py
backend/tests/system/: test_first_boot.py  test_system.py
(+663 files in other folders)
